# AOWIS-SERVER-MAP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_linux.sh
configs/apache/: aowis-map.localhost.conf
configs/systemd/: README.md  aowis-epanet-server.service
src/: main.cpp  maptiles.cpp  maptiles.h  rest_client.cpp  server.cpp
src/lib/: CMakeLists.txt  http_client_tilefetch.cpp  http_client_tilefetch.h  maptiles.cpp  maptiles.h  rest_client.h
src/server/: CMakeLists.txt  server.h
